<resources>
    <string name="app_name">МТС.Тета Фильмы</string>
    <string name="movie_category">боевики</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актеры</string>
    <string name="movie_poster_description">Постер фильма</string>
    <string name="movie_date">Дата релиза: 22.04.2021</string>
    <string name="movie_title">Гнев человеческий</string>
    <string name="movie_age">18+</string>
    <string name="actor_1_name">Джейсон Стэйтем</string>
    <string name="actor_2_name">Холт Маккэллани</string>
    <string name="actor_3_name">Джош Харнетт</string>
    <string name="popular_now_title">Популярное сейчас</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_user_profile">Ваше имя</string>
    <string name="email_user">Ваш E-mail</string>
    <string name="interests_user">Интересы</string>
    <string name="personal_data_user">Личные данные</string>
    <string name="name_user_input">Имя</string>
    <string name="password_user_input">Пароль</string>
    <string name="email_user_input">E-mail</string>
    <string name="phone_user_input">Телефон</string>
    <string name="settings_user">Настройки</string>
    <string name="notifications_sounds">Уведомления и звуки</string>
    <string name="privacy_policy">Конфедициальность</string>
    <string name="themes">Темы</string>
    <string name="languages">Язык</string>
    <string name="data_memory">Данные и память</string>
    <string name="application">Приложение</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="report_problem">Сообщить о проблеме</string>
    <string name="exit">Выйти</string>
    <string name="soon">Скоро</string>
    <string name="save_profile_info">Сохранить</string>
    <string name="api_key">97d1d87288586c192d78f03b0336edd0</string>
    <string name="poster_base_url">https://www.themoviedb.org/t/p/w600_and_h900_bestv2/</string>
    <string name="bg_img_base_url">https://www.themoviedb.org/t/p/w1000_and_h450_multi_faces</string>
    <string name="actor_photo_url">https://www.themoviedb.org/t/p/w600_and_h900_bestv2</string>
    <string name="movie_age_item">%s+</string>
    <string name="error_snack_bar">Ошибка: %s</string>
    <string name="movie_date_release">Дата релиза: %s</string>
    <string name="notification_update_db_title">Обновление БД</string>
    <string name="notification_update_db_description">Обновление базы данных выполненно успешно!</string>
    <string name="personal_info">Персональная информация</string>
    <string name="gender">Пол</string>
    <string name="date_birth">Дата рождения</string>
    <string name="place_birth">Место рождения</string>
    <string name="biography">Биография</string>
    <string name="woman_gender">Женский</string>
    <string name="man_gender">Мужской</string>
    <string name="no_info_biography">Нет информации о биографии</string>
    <string name="search_movie">Найти фильм...</string>
    <string name="ru_language">ru-RU</string>
</resources>