<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/movieItemRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="380dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/moviePosterWrapper"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvMovieTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        android:foreground="?attr/selectableItemBackgroundBorderless">
        <ImageView
            android:id="@+id/imgMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster_description" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soon"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_tv_soon"
            android:layout_gravity="bottom"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/moviePosterWrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/movie_title"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tvMovieDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
        android:text="@string/movie_description"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:maxLines="6"
        android:ellipsize="end"/>

    <RatingBar
        android:id="@+id/movieRatingLayout"
        style="@style/CustomRatingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginBottom="5dp"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1"/>
    <TextView
        android:id="@+id/tvMovieAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/movie_age"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/bg_circle_age_movie_item"
        android:textColor="@color/black"
        android:textSize="7dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>