<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp"/>

            <TextView
                android:id="@+id/tvFirstNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_user_profile"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                android:layout_marginTop="64dp"/>

            <TextView
                android:id="@+id/tvEmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_user"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvFirstNameUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                android:layout_marginTop="2dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civAvatarUser"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_default_avatar"
                app:layout_constraintEnd_toStartOf="@id/guideLine_2"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="48dp"/>

            <TextView
                android:id="@+id/tvInterestsUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests_user"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvEmailUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                android:layout_marginTop="57dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInterestsUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvInterestsUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/popular_now_item"
                tools:itemCount="3"/>

            <TextView
                android:id="@+id/tvPersonalDataUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_data_user"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/rvInterestsUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                android:layout_marginTop="40dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilNameUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvPersonalDataUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                app:layout_constraintEnd_toEndOf="@id/guideLine_2"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_user_input"
                    android:inputType="text"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:paddingStart="0dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilPasswordUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ilNameUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                app:layout_constraintEnd_toEndOf="@id/guideLine_2"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password_user_input"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:paddingStart="0dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilEmailUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ilPasswordUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                app:layout_constraintEnd_toEndOf="@id/guideLine_2"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_user_input"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:paddingStart="0dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilPhoneUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ilEmailUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                app:layout_constraintEnd_toEndOf="@id/guideLine_2"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_user_input"
                    android:inputType="phone"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:paddingStart="0dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_user"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/ilPhoneUser"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                android:layout_marginTop="40dp"/>

            <Button
                android:id="@+id/btnNotificationsSounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_sounds"
                app:layout_constraintTop_toBottomOf="@id/tvSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btnPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                app:layout_constraintTop_toBottomOf="@id/btnNotificationsSounds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btnThemes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themes"
                app:layout_constraintTop_toBottomOf="@id/btnPrivacyPolicy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                app:layout_constraintTop_toBottomOf="@id/btnThemes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />
            <Button
                android:id="@+id/btnDataMemory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_memory"
                app:layout_constraintTop_toBottomOf="@id/btnLanguage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/tvApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/btnDataMemory"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                android:layout_marginTop="40dp"/>

            <Button
                android:id="@+id/btnAskQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_question"
                app:layout_constraintTop_toBottomOf="@id/tvApp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btnReportProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_problem"
                app:layout_constraintTop_toBottomOf="@id/btnAskQuestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:elevation="0dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_arrow_next_btn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                tools:ignore="UnusedAttribute" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="@id/guideLine_1"
                app:layout_constraintEnd_toEndOf="@id/guideLine_2"
                app:layout_constraintTop_toBottomOf="@id/btnReportProblem"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/gray_my"
                android:text="@string/exit"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                tools:ignore="UnusedAttribute" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>