<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/movieItemRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="380dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/moviePosterWrapper"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/movieTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        android:foreground="?attr/selectableItemBackgroundBorderless">
        <ImageView
            android:id="@+id/movie_poster_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster_img_description" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/movieTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/moviePosterWrapper"
        app:layout_constraintStart_toStartOf="@id/line_1"
        android:text="@string/movie_title"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/movieDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/line_2"
        app:layout_constraintTop_toBottomOf="@id/movieTitleText"
        android:text="@string/movie_description"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:maxLines="6"
        android:ellipsize="end"/>
    <LinearLayout
        android:id="@+id/movieRatingLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_active"/>
        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_active"/>
        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_active"/>
        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_active"/>
        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_no_active"/>
    </LinearLayout>
    <TextView
        android:id="@+id/movieAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/movie_age"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/bg_circle_age_movie_item"
        android:textColor="@color/black"
        android:textSize="7dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>